Removed gap bug from research page.

--- a/gofastpay.css
+++ b/gofastpay.css
@@ -1029,4 +1029,5 @@ address {
 
 .whitepaper #contact-form {
     background-color: #e7e5e5;
+    margin-top: -15px;
 }
